--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -325,7 +325,7 @@
       <div class="card-header d-flex justify-content-between align-items-center py-2">
         <div>
           <h6 class="mb-0">Engine Program Overview</h6>
-          <small class="text-dark opacity-75">Distinct ESN Counts by Program and Year</small>
+          <small class="text-dark opacity-75">ESN Counts by Program and Year</small>
         </div>
         <div class="d-flex align-items-center gap-2">
           <button class="btn btn-sm btn-outline-secondary" id="engineProgramBackBtn" style="display:none;">Back</button>
@@ -477,7 +477,7 @@
           </div>
           <div class="card chart-card same-height d-none" id="chart-rm-level">
             <div class="card-header d-flex justify-content-between align-items-center py-2 px-3" style="min-height:40px;">
-              <h6 class="mb-0 small fw-semibold">RM Details</h6>
+              <h6 class="mb-0 small fw-semibold">RM Supplier Distribution by Raw Material</h6>
               <div class="d-flex align-items-center gap-2">
                 <small class="text-muted">Click a bar above to see details</small>
                 <button class="btn btn-sm btn-outline-secondary" id="rmLevelBackBtn" style="display:none;">Back</button>
@@ -617,9 +617,9 @@
             <table class="table table-bordered table-sm">
               <thead class="table-light">
                 <tr>
-                  <th>Suppliers</th>
-                  <th>Level 1 PN</th>
-                  <th>Description</th>
+                  <th>Parent Part Supplier</th>
+                  <th>Part Number</th>
+                  <th>Part Description</th>
                   <th>2025</th>
                   <th>2026</th>
                   <th>2027</th>
