--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -697,7 +697,7 @@
   <script defer src="src/charts.js?v=3"></script>
   <script defer src="src/utils.js?v=2"></script>
   <script defer src="src/filters.js?v=2"></script>
-  <script defer src="src/demand.js?v=26"></script>
+  <script defer src="src/demand.js?v=30"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
   <!-- Chatbot Icon -->
@@ -737,12 +737,18 @@
           </div>
           <!-- Demand Chart -->
           <div class="card chart-card mb-4">
-            <div class="card-header">
+            <div class="card-header d-flex justify-content-between align-items-center">
               <h6 class="mb-0" id="modalChartTitle">Raw Material Demand per Supplier</h6>
+              <button type="button" class="btn btn-sm btn-outline-secondary" onclick="resetModalChartZoom()">
+                <i class="bi bi-arrow-counterclockwise"></i> Reset Zoom
+              </button>
             </div>
             <div class="card-body">
               <div class="chart-container" style="height: 300px;">
                 <canvas id="modalRawMaterialChart"></canvas>
+              </div>
+              <div class="text-muted small mt-2">
+                <strong>Zoom:</strong> Scroll wheel to zoom, Ctrl+Drag to pan
               </div>
             </div>
           </div>
