--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -697,7 +697,7 @@
   <script defer src="src/charts.js?v=3"></script>
   <script defer src="src/utils.js?v=2"></script>
   <script defer src="src/filters.js?v=2"></script>
-  <script defer src="src/demand.js?v=30"></script>
+  <script defer src="src/demand.js?v=31"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
   <!-- Chatbot Icon -->
@@ -775,6 +775,7 @@
                       <th colspan="4" class="text-center">2025</th>
                       <th colspan="4" class="text-center">2026</th>
                       <th colspan="4" class="text-center">2027</th>
+                      <th colspan="4" class="text-center">2028</th>
                     </tr>
                     <tr>
                       <th></th>
@@ -785,6 +786,10 @@
                       <th></th>
                       <th></th>
                       <th></th>
+                      <th>Q1</th>
+                      <th>Q2</th>
+                      <th>Q3</th>
+                      <th>Q4</th>
                       <th>Q1</th>
                       <th>Q2</th>
                       <th>Q3</th>
