feat: Add clean routes, fix column mapping, enhance demand dashboard
- Created html_routes.py with clean RESTful routes (/, /demand, /datatable, etc.)
- Fixed DuckDB column name detection to happen before index creation
- Added column mapping for underscore vs space naming conventions
- Updated navigation links in all HTML files to use clean routes
- Added growth indicators for quarter view in Engine Program Overview
- Updated datatable.html to use clean home route
- Backend automatically handles all 82 database columns dynamically
- No backend updates required for database schema changes

--- a/frontend/datatable.html
+++ b/frontend/datatable.html
@@ -317,7 +317,7 @@
           <h2><i class="fas fa-table"></i> Data Table</h2>
           <p class="text-muted mb-0" style="font-size: 0.85rem;">Browse and filter data from data-aeo.duckdb</p>
         </div>
-        <a href="index.html" class="btn btn-outline-secondary btn-sm">
+        <a href="/" class="btn btn-outline-secondary btn-sm">
           <i class="fas fa-home"></i> Home
         </a>
       </div>
