--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -36,7 +36,7 @@
       <!-- Logo and Title (left) -->
       <div class="d-flex align-items-center">
         <div class="logo me-3">
-          <a href="index.html">
+          <a href="/">
             <svg width="120" height="48" viewBox="0 0 167 64" fill="none" xmlns="http://www.w3.org/2000/svg" class="genpact-logo">
               <g id="Group 1597881160">
                 <g id="Group">
@@ -62,7 +62,7 @@
       <nav class="navbar-nav">
         <ul class="nav-menu d-flex list-unstyled mb-0">
           <li class="nav-item me-3 dropdown">
-            <a href="index.html" class="nav-link">
+            <a href="/" class="nav-link">
               Home
             </a>
           </li>
@@ -71,9 +71,9 @@
               Engine Delivery <i class="fas fa-chevron-down ms-1"></i>
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="demand.html">Demand</a></li>
-              <li><a class="dropdown-item" href="BOMexplosion.html">BOM Explosion</a></li>
-              <li><a class="dropdown-item" href="GapAnalysis.html">GAP Analysis</a></li>
+              <li><a class="dropdown-item" href="/demand">Demand</a></li>
+              <li><a class="dropdown-item" href="/bom-explosion">BOM Explosion</a></li>
+              <li><a class="dropdown-item" href="/gap-analysis">GAP Analysis</a></li>
             </ul>
           </li>
           <li class="nav-item me-3 dropdown">
