--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,7 @@
           <nav class="navbar-nav">
             <ul class="nav-menu d-flex list-unstyled mb-0">
               <li class="nav-item me-3 dropdown">
-                <a href="index.html" class="nav-link active">
+                <a href="/" class="nav-link active">
                   Home
                 </a>
               </li>
@@ -53,9 +53,9 @@
                   Engine Delivery <i class="fas fa-chevron-down ms-1"></i>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="demand.html">Demand</a></li>
-                  <li><a class="dropdown-item" href="BOMexplosion.html">BOM Explosion</a></li>
-                  <li><a class="dropdown-item" href="GapAnalysis.html">GAP Analysis</a></li>
+                  <li><a class="dropdown-item" href="/demand">Demand</a></li>
+                  <li><a class="dropdown-item" href="/bom-explosion">BOM Explosion</a></li>
+                  <li><a class="dropdown-item" href="/gap-analysis">GAP Analysis</a></li>
                 </ul>
               </li>
               <li class="nav-item me-3 dropdown">
@@ -129,9 +129,9 @@
                   <h3 class="card-title">Engine Delivery</h3>
                   <p class="card-description">Successful engine delivery requires precise logistics, thorough inspection, and seamless installation</p>
                   <div class="card-submenu mt-3">
-                    <a href="demand.html" class="submenu-btn">Demand</a>
-                    <a href="BOMexplosion.html" class="submenu-btn">BOM Explosion</a>
-                    <a href="GapAnalysis.html" class="submenu-btn">GAP Analysis</a>
+                    <a href="/demand" class="submenu-btn">Demand</a>
+                    <a href="/bom-explosion" class="submenu-btn">BOM Explosion</a>
+                    <a href="/gap-analysis" class="submenu-btn">GAP Analysis</a>
                   </div>
                 </div>
               </div>
