update demand supplier chart

--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -447,7 +447,7 @@
           </div>
           <div class="card chart-card same-height d-none" id="chart-supplier">
             <div class="card-header d-flex justify-content-between align-items-center py-2 px-3" style="min-height:40px;">
-              <h6 class="mb-0 small fw-semibold">Supplier Distribution per Engine Program</h6>
+              <h6 class="mb-0 small fw-semibold">Count of Parent Part Supplier by Supplier Type</h6>
               <div class="d-flex gap-1">
                 <button class="btn btn-sm btn-outline-secondary" id="supplierBackBtn" style="display:none;">Back</button>
                 <button id="btnViewDetailsSup" class="btn btn-xs btn-outline-primary px-2 py-1 d-flex align-items-center" aria-label="View details" style="font-size:0.82rem;">
@@ -697,7 +697,8 @@
   <script defer src="src/charts.js?v=3"></script>
   <script defer src="src/utils.js?v=2"></script>
   <script defer src="src/filters.js?v=2"></script>
-  <script defer src="src/demand.js?v=26"></script>
+  <script defer src="src/supplier-type-chart.js?v=1"></script>
+  <script defer src="src/demand.js?v=27"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
   <!-- Chatbot Icon -->
