HW owner updated

--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -514,7 +514,7 @@
           </div>
           <div class="card chart-card same-height d-none" id="chart-hwowner">
             <div class="card-header d-flex justify-content-between align-items-center py-2 px-3" style="min-height:40px;">
-              <h6 class="mb-0 small fw-semibold">HW Owner Total Demand</h6>
+              <h6 class="mb-0 small fw-semibold">HW Owner by Part Complexity</h6>
               <div class="d-flex gap-1">
                 <button id="btnViewDetailsHW" class="btn btn-xs btn-outline-primary px-2 py-1 d-flex align-items-center" aria-label="View details" style="font-size:0.82rem;">
                   <span class="icon me-1" aria-hidden="true" style="width:14px;height:14px;display:inline-block;">
@@ -698,7 +698,8 @@
   <script defer src="src/utils.js?v=2"></script>
   <script defer src="src/filters.js?v=2"></script>
   <script defer src="src/supplier-type-chart.js?v=1"></script>
-  <script defer src="src/demand.js?v=27"></script>
+  <script defer src="src/hw-owner-complexity-chart.js?v=1"></script>
+  <script defer src="src/demand.js?v=28"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
   <!-- Chatbot Icon -->
