--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -505,11 +505,7 @@
               </div>
             </div>
             <div class="card-body">
-              <div class="row g-3 align-items-stretch">
-                <div class="col-12 col-lg-12">
-                  <canvas id="rmDetailChart" height="250"></canvas>
-                </div>
-              </div>
+              <canvas id="rmDetailChart" height="250"></canvas>
             </div>
           </div>
           <div class="card chart-card same-height d-none" id="chart-hwowner">
@@ -697,9 +693,10 @@
   <script defer src="src/charts.js?v=3"></script>
   <script defer src="src/utils.js?v=2"></script>
   <script defer src="src/filters.js?v=2"></script>
-  <script defer src="src/supplier-type-chart.js?v=1"></script>
+  <script defer src="src/supplier-type-chart.js?v=3"></script>
+  <script defer src="src/rm-supplier-raw-material-chart.js?v=3"></script>
   <script defer src="src/hw-owner-complexity-chart.js?v=1"></script>
-  <script defer src="src/demand.js?v=28"></script>
+  <script defer src="src/demand.js?v=29"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
   <!-- Chatbot Icon -->
