update gap analysis

--- a/frontend/GapAnalysis.html
+++ b/frontend/GapAnalysis.html
@@ -403,10 +403,16 @@
               <tr>
                 <th scope="col" class="text-center">Priority</th>
                 <th scope="col">RM Part</th>
+                <th scope="col">RM Type</th>
+                <th scope="col">RM Supplier</th>
                 <th scope="col">Parent Part Number</th>
+                <th scope="col">Part Description</th>
+                <th scope="col">Part Supplier</th>
                 <th scope="col">ESN</th>
+                <th scope="col">HWO</th>
                 <th scope="col">Status</th>
-                <th scope="col">Due Date</th>
+                <th scope="col">Target Ship Date</th>
+                <th scope="col">Planned PO Date Target</th>
                 <th scope="col">Action Required</th>
                 <th scope="col" class="text-center">Email</th>
                 <th scope="col" class="text-center">Actions</th>
