--- a/frontend/GapAnalysis.html
+++ b/frontend/GapAnalysis.html
@@ -300,7 +300,7 @@
         </div>
         
         <!-- Clear All Button (Extreme Right) -->
-        <button class="btn btn-sm" id="clearAllFilters" style="background-color: #ff6600; color: white; border: none; white-space: nowrap;">
+        <button class="btn btn-sm" id="clearAllFilters" style="background-color: #ff6600; color: white; border: none; white-space: nowrap; display: none;">
           <i class="fas fa-times-circle me-1"></i>Clear All
         </button>
     </div>
@@ -367,8 +367,8 @@
     <div class="card mt-4">
       <div class="card-header d-flex justify-content-between align-items-center">
         <div>
-          <h5 class="mb-0">📋 Priority Action Items - Gap Records Only</h5>
-          <small class="text-muted">Showing only records with identified gaps (Have Gap = Y)</small>
+          <h5 class="mb-0">Priority Action Items - Gap Records</h5>
+          <small class="text-muted">Showing only records with identified gaps</small>
         </div>
         <div class="d-flex gap-2 align-items-center">
           <span class="badge bg-primary" id="totalRecordsCount">Loading...</span>
