--- a/frontend/GapAnalysis.html
+++ b/frontend/GapAnalysis.html
@@ -460,6 +460,29 @@
 
   </div>
 
+  <!-- Critical Alerts Modal -->
+  <div class="modal fade" id="criticalAlertsModal" tabindex="-1" aria-labelledby="criticalAlertsModalLabel" aria-hidden="true" data-bs-backdrop="static" data-bs-keyboard="false">
+    <div class="modal-dialog modal-dialog-centered" style="max-width: 650px;">
+      <div class="modal-content border-0 shadow-lg" style="border-radius: 16px; overflow: hidden;">
+        <div class="modal-header text-white border-0 position-relative" style="background: linear-gradient(135deg, #dc3545 0%, #c82333 100%); padding: 1rem 1.5rem;">
+          <h5 class="modal-title d-flex align-items-center mb-0" id="criticalAlertsModalLabel" style="font-weight: 600; font-size: 1.1rem;">
+            <i class="fas fa-bell" style="font-size: 1.25rem; margin-right: 0.75rem; animation: ring 2s ease-in-out infinite;"></i>
+            <span id="alertsCount">3 New Alerts</span>
+          </h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" style="opacity: 0.9;"></button>
+        </div>
+        <div class="modal-body p-0" style="max-height: 500px; overflow-y: auto;">
+          <div id="criticalAlertsList">
+            <!-- Alerts will be populated here by JavaScript -->
+          </div>
+        </div>
+        <div class="modal-footer border-0" style="background-color: #f8f9fa; padding: 0.875rem 1.5rem;">
+          <button type="button" class="btn btn-primary px-4" data-bs-dismiss="modal" style="border-radius: 8px; font-weight: 500; box-shadow: 0 2px 4px rgba(0,123,255,0.3);">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Bootstrap 5 JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Chart.js -->
