--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,6 +54,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/demand">Demand</a></li>
+                  <li><a class="dropdown-item" href="/demand-modular">Demand (Modular) <span class="badge bg-success ms-1">New</span></a></li>
                   <li><a class="dropdown-item" href="/bom-explosion">BOM Explosion</a></li>
                   <li><a class="dropdown-item" href="/gap-analysis">GAP Analysis</a></li>
                 </ul>
