rm supplier popup updated

--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -693,12 +693,14 @@
   <script defer src="src/part-walker-optimized.js?v=1"></script>
   <!-- Removed embedded-data.js - using 100% dynamic data from backend -->
   <script defer src="src/charts.js?v=3"></script>
-  <script defer src="src/utils.js?v=2"></script>
+  <script defer src="src/utils.js?v=3"></script>
   <script defer src="src/filters.js?v=2"></script>
   <script defer src="src/supplier-type-chart.js?v=4"></script>
   <script defer src="src/rm-supplier-raw-material-chart.js?v=4"></script>
   <script defer src="src/hw-owner-complexity-chart.js?v=1"></script>
-  <script defer src="src/demand.js?v=36"></script>
+  <script defer src="src/supplier-popup.js?v=2"></script>
+  <script defer src="src/rm-supplier-popup.js?v=8"></script>
+  <script defer src="src/demand.js?v=40"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
   <!-- Chatbot Icon -->
@@ -897,12 +899,11 @@
                       <th>RM Supplier</th>
                       <th>RM Part Number</th>
                       <th>Parent Part No</th>
-                      <th>Part Description</th>
+                      <th>Parent Part Supplier</th>
                       <th>HWO</th>
                       <th>Level</th>
-                      <th>QPE</th>
                       <th>MFG LT (Start-CTB)</th>
-                      <th colspan="4" class="text-center">2025</th>
+                      <th colspan="1" class="text-center">2025</th>
                       <th colspan="4" class="text-center">2026</th>
                       <th colspan="4" class="text-center">2027</th>
                       <th colspan="4" class="text-center">2028</th>
@@ -915,10 +916,6 @@
                       <th></th>
                       <th></th>
                       <th></th>
-                      <th></th>
-                      <th>Q1</th>
-                      <th>Q2</th>
-                      <th>Q3</th>
                       <th>Q4</th>
                       <th>Q1</th>
                       <th>Q2</th>
