rm popup updated

--- a/frontend/demand.html
+++ b/frontend/demand.html
@@ -699,7 +699,7 @@
   <script defer src="src/rm-supplier-raw-material-chart.js?v=4"></script>
   <script defer src="src/hw-owner-complexity-chart.js?v=1"></script>
   <script defer src="src/supplier-popup.js?v=2"></script>
-  <script defer src="src/rm-supplier-popup.js?v=8"></script>
+  <script defer src="src/rm-supplier-popup.js?v=9"></script>
   <script defer src="src/demand.js?v=40"></script>
   <script defer src="src/dropdowns.js?v=2"></script>
 
@@ -871,16 +871,21 @@
           <div class="card chart-card mb-4">
             <div class="card-header d-flex justify-content-between align-items-center">
               <h6 class="mb-0" id="modalChartTitle">Raw Material Demand per Supplier</h6>
-              <button class="btn btn-sm btn-outline-secondary" id="resetRawMaterialZoom" title="Reset zoom">
-                <i class="bi bi-arrow-counterclockwise"></i> Reset Zoom
-              </button>
+              <div>
+                <button class="btn btn-sm btn-outline-primary me-2" id="showAllRMSuppliers" title="Show all suppliers">
+                  <i class="bi bi-list"></i> Show All
+                </button>
+                <button class="btn btn-sm btn-outline-secondary" id="resetRawMaterialZoom" title="Reset to top 5">
+                  <i class="bi bi-arrow-counterclockwise"></i> Reset
+                </button>
+              </div>
             </div>
             <div class="card-body">
               <div class="chart-container" style="height: 300px;">
                 <canvas id="modalRawMaterialChart"></canvas>
               </div>
               <div class="text-muted small text-center mt-2">
-                💡 <strong>Tip:</strong> Ctrl+Scroll to zoom, Shift+Drag to pan, Double-click to reset
+                💡 <strong>Tip:</strong> Scroll to navigate, Click bar to filter table, Double-click to reset
               </div>
             </div>
           </div>
